test/invalid/baseline/module.txt
Syntax error at line 2 in module.webidl:
module gfx {
^ Unrecognised tokens
